[package]
name = "hanabi"
version = "0.1.0"
authors = ["nalleyer <nalleyer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = {git = "https://github.com/GodotNativeTools/godot-rust"}
specs = "0.16.1"
log = "0.4"
simple_logger = "1.6"
lazy_static = "1.4.0"

[lib]
crate-type = ["cdylib"]

#[lib]
#crate-type = ["dylib"]